Notebook extra space fixed

--- a/public/styles.css
+++ b/public/styles.css
@@ -868,7 +868,6 @@ footer {
     margin: auto;
     width: 80%;
     overflow-y: auto;
-    height: calc(150vh - 50px);
 }
 
 .week-content {
